# OCKSVM

./: LICENSE  README.md  pyproject.toml
src/ocksvm/: __init__.py  model.py
tests/: model_tests.py
