[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ocksvm"
version = "0.1.1"
description = "A hybrid KMeans-SVM with soft Convex Hull for a fast and accurate SVM classifier"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scikit-learn>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]